# Paradigmas_TJ_2024.2M1

./: .gitignore  README.md
Python/: desenvolvedores.csv  main.py
c/: CMakeLists.txt  desenvolvedores.csv  main.c
